<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">It\'s empty in here...</string>
    <string name="empty_view_subtitle_text">Start by adding a product!</string>
    <string name="product_name_text">Product Name</string>
    <string name="product_price_text">Product Price</string>
    <string name="add_photo_text">Click to add a photo of your product</string>
    <string name="change_photo_text">Click to change the photo of your product</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_data">Error with saving product</string>
    <string name="data_saved">Product saved</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="intentType">image/*</string>
    <string name="selectPicture">Select Picture</string>
    <string name="productNameReq">Product name required</string>
    <string name="productPicReq">Product picture required</string>
    <string name="dummyDataName">Headphones</string>
    <string name="dummyDataPrice">15.5</string>
    <string name="dummyDataPicUri">android.resource://com.example.android.inventory/drawable/headphones</string>
    <string name="dummyDataSupplierName">Ragheed Huneineh</string>
    <string name="dummyDataSupplierEmail">rmhuneineh@gmail.com</string>
    <string name="hintName">Name</string>
    <string name="hintPrice">Price</string>
    <string name="currency">$</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="remainingPieces">Remaining Pieces</string>
    <string name="orderMore">Order More</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierEmail">Supplier E-mail</string>
    <string name="hintSupplierName">Supplier Name</string>
    <string name="hintSupplierEmail">ex: supplier@gmail.com</string>
    <string name="supplierNameReq">Supplier name required</string>
    <string name="supplierEmailReq">Supplier email required</string>
    <string name="productPriceReq">Product price required</string>
</resources>
