<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.example.android.inventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/picture_frame"
            android:src="@drawable/ic_add_picture">
        </ImageView>

        <TextView
            android:id="@+id/add_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="20sp"
            android:textColor="#8BC34A"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/product_name_text"
                style="@style/CategoryStyle" />

            <TextView
                android:text="@string/product_price_text"
                style="@style/CategoryStyle"
                android:layout_marginTop="16dp"/>

            <TextView
                android:text="@string/supplierName"
                style="@style/CategoryStyle"
                android:layout_marginTop="16dp"/>

            <TextView
                android:text="@string/supplierEmail"
                style="@style/CategoryStyle"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hintName"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_product_price"
                    android:hint="@string/hintPrice"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/currency"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/supplier_name"
                android:hint="@string/hintSupplierName"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/supplier_email"
                android:hint="@string/hintSupplierEmail"
                android:inputType="textEmailAddress"
                style="@style/EditorFieldStyle"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:onClick="minusButtonClicked"/>

        <TextView
            android:id="@+id/edit_quantity_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="26sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:onClick="plusButtonClicked"/>
    </LinearLayout>


</LinearLayout>
