<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginRight="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_product_name"
            android:text="@string/dummyDataName"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/text_product_name">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/text_product_quantity"
                android:paddingTop="8dp"
                android:text="5"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/remainingPieces"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-dark"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"
        android:text="@string/currency"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/text_product_price"
        android:paddingTop="8dp"
        android:text="@string/dummyDataPrice"
        android:fontFamily="sans-serif-dark"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD" />

</LinearLayout>